# icarus

./: README.md  TODO.md  index.html  package-lock.json  package.json
assets/: mobile-demo.mov
src/: events.ts  main.ts  styles.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
